SERVER-18902 Bump leaf_value_max to 64MB to keep large docs in WiredTiger cache