src/mongo/db/storage/wiredtiger/wiredtiger_record_store.cpp
@@ -318,7 +318,7 @@ namespace {
         // Choose a higher split percent, since most usage is append only. Allow some space
         // for workloads where updates increase the size of documents.
         ss << "split_pct=90,";
-        ss << "leaf_value_max=1MB,";
+        ss << "leaf_value_max=64MB,";
         ss << "checksum=on,";
         if (wiredTigerGlobalOptions.useCollectionPrefixCompression) {
             ss << "prefix_compression,";
